--- a/package.json
+++ b/package.json
@@ -5,16 +5,29 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "gatsby": "^5.0.0",
+    "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-plugin-google-gtag": "^5.1.0",
     "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-plugin-sitemap": "^6.1.0",
     "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-csv": "^5.0.0",
     "gatsby-transformer-sharp": "^5.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "prettier": "^2.7.1"
   },
   "keywords": [
