--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@meilisearch/instant-meilisearch": "^0.10.1",
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "gatsby": "^5.0.0",
     "gatsby-awesome-pagination": "^0.3.8",
@@ -18,6 +18,7 @@
     "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-meilisearch": "^0.3.1",
+    "gatsby-plugin-react-leaflet": "^4.0.3",
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-plugin-sitemap": "^6.1.0",
     "gatsby-plugin-twitter": "^5.2.0",
@@ -28,6 +29,7 @@
     "gatsby-transformer-sharp": "^5.0.0",
     "graceful-fs": "^4.2.10",
     "instantsearch.css": "7.4.2",
+    "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -62,9 +64,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/micropasts/bronze-age-index"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/micropasts/bronze-age-index/issues"
   }
 }
